# CliSAT

./: .clang-format  .gitignore  .gitmodules  AMTS.h  AMTS.ixx  ANTS.h  BBMC.cpp  BBMC.h  BBMC.ixx  BBMCR.h  BBMCR.ixx  BB_Max_Clique.h  CMakeLists.txt  CMakePresets.json  CliSAT.cpp  CliSAT.h  CliSAT.ixx  CliSAT.sln  CliSAT.vcxproj  CliSAT.vcxproj.filters  README.md  aligned_allocator.h  aligned_allocator.ixx  bitscan_benchmark.h  bitscan_benchmark.ixx  coloring.h  coloring.ixx  custom_bitset.cpp  custom_bitset.h  custom_bitset.ixx  custom_graph.cpp  custom_graph.h  custom_graph.ixx  instructions.h  instructions.ixx  main.cpp  sorting.h  sorting.ixx
BitGraph/install/: CMakeLists.txt
BitGraph/install/src/: bitstrings.cpp  graph.cpp
BitGraph/src/: CMakeLists.txt
BitGraph/src/bitscan/: CMakeLists.txt  README.md  bbtypes.h
BitGraph/src/bitscan/tests/: CMakeLists.txt  test_bbscan.cpp  test_bbscan_sparse.cpp  test_bbscan_sparse_nested.cpp
BitGraph/src/graph/: CMakeLists.txt  readme.md  simple_graph.cpp  simple_graph.h  simple_graph_ew.cpp  simple_graph_w.cpp  simple_sparse_graph.h  simple_sparse_ugraph.h  simple_ugraph.cpp  simple_ugraph.h
BitGraph/src/graph/algorithms/: decode.cpp  graph_fast_sort.h
BitGraph/src/graph/examples/: CMakeLists.txt
BitGraph/src/graph/tests/: CMakeLists.txt  test_decode.cpp  test_graph.cpp  test_graph_conversions.cpp  test_graph_fast_sort.cpp  test_graph_fast_sort_weighted.cpp  test_ugraph.cpp
BitGraph/src/utils/: CMakeLists.txt  README.md  common.cpp  common_types.cpp  common_types.h  info_analyser.cpp  info_analyser.h
BitGraph/src/utils/info/: info_base.cpp  info_base.h  info_clq.cpp  info_clq.h
BitGraph/src/utils/tests/: CMakeLists.txt  test_info.cpp  test_infoAnalyser.cpp  test_info_clq.cpp  test_precise_timer.cpp
cmake/: toolchain-aarch64-linux-gnu.cmake
examples/: C250.9.clq
include/: AMTS.h  CliSAT.h  aligned_allocator.h  bitscan_benchmark.h  coloring.h  custom_bitset.h  custom_graph.h  fixed_vector.h  instructions.h  parsing.h  solution.h  sorting.h  thread_pool.h  threadsafe_bitset.h  threadsafe_priority_queue.h  threadsafe_queue.h  threadsafe_stack.h  threadsafe_vector.h
src/: BBMCR.h  CliSAT.cpp  coloring.h  instructions.cpp  instructions.h  main.cpp
